--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -1,8 +1,16 @@
 version: '3'
+volumes:
+  dados:
 services:
-    db:
-        image: postgres:9.6
-        environment: 
-            - POSTGRES_USER=postgres
-            - POSTGRES_PASSWORD=postgres
-            - POSTGRES_DB=db
+  db:
+    image: postgres:9.6
+    volumes:
+      # Volume dos dados
+      - dados:/var/lib/postgresql/data
+      # Scripts
+      - ./scripts:/scripts
+      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment: 
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+        - POSTGRES_DB=db
