--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -14,3 +14,10 @@ services:
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
         - POSTGRES_DB=db
+  frontend:
+      image: nginx:1.13
+      volumes:
+          # Site
+          - ./web:/usr/share/nginx/html/
+      ports:
+          - 80:80
