--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 volumes:
   dados:
+networks:
+  banco:
+  web:
 services:
   db:
     image: postgres:9.6
@@ -11,18 +14,24 @@ services:
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment: 
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=postgres
-        - POSTGRES_DB=db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=db
+    networks:
+      - banco
   frontend:
-      image: nginx:1.13
-      volumes:
-          # Site
-          - ./web:/usr/share/nginx/html/
-          # Configuração do proxy reverso
-          - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      ports:
-          - 80:80
+    image: nginx:1.13
+    volumes:
+      # Site
+      - ./web:/usr/share/nginx/html/
+      # Configuração do proxy reverso
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+    networks:
+      - web
+    depends_on:
+      - app
   app:
     image: python:3.6
     volumes:
@@ -30,3 +39,8 @@ services:
       - ./app:/app
     working_dir: /app
     command: bash ./app.sh
+    networks:
+      - banco
+      - web
+    depends_on:
+      - db
