--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   db:
     image: postgres:9.6
     volumes:
-      #Volmues dos dados
+      #volumes dos dados
       - dados:/var/lib/postgresql/data
       #Scripts
       - ./scripts:/scripts
@@ -48,12 +48,12 @@ services:
     networks: 
       - fila
   worker:
-    image: python:3.6
+    build: worker
     volumes:
       # Worker
       - ./worker:/worker
     working_dir: /worker
-    command: bash ./app.sh
+    command: worker.py
     networks: 
       - fila
     depends_on:
